Bug 287730. Fix n of m positional info for HTML radio buttons. r=timeless, sr=bz